[gd_scene load_steps=6 format=1]

[ext_resource path="res://Kontroloj/Niveloj.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Temoj/Butono_sxveda.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=4]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=5]

[node name="Niveloj" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Fadi" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Nivelo_nova" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 0.0
margin/top = -100.0
margin/right = 0.0
margin/bottom = -100.0

[node name="Rektangulo" type="Polygon2D" parent="Nivelo_nova"]

transform/pos = Vector2( -100, 0 )
polygon = Vector2Array( 500, 200, 100, 200, 100, 500, 500, 500 )
uv = Vector2Array(  )
color = Color( 0.917647, 0.917647, 0.917647, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Rekordo" type="Label" parent="Nivelo_nova"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = -267.0
margin/bottom = -350.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="Nivelo_nova"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 400.0
margin/right = -650.0
margin/bottom = -500.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Via Rekordo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ludi" type="Button" parent="Nivelo_nova"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 500.0
margin/right = 400.0
margin/bottom = 600.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ludi"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="Nivelo_nova"]

transform/pos = Vector2( -93, 1 )
polygon = Vector2Array( 493, 199, 780, 232, 743, 499, 493, 599 )
uv = Vector2Array(  )
color = Color( 0.403922, 0.227451, 0.717647, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Nivelo_nova"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.6, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 250.0
margin/right = -817.0
margin/bottom = -556.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
text = "Nova epoko"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Nivelo_malnova" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 0.0
margin/top = 450.0
margin/right = 0.0
margin/bottom = 450.0

[node name="Rektangulo" type="Polygon2D" parent="Nivelo_malnova"]

transform/pos = Vector2( -100, 0 )
polygon = Vector2Array( 500, 200, 100, 200, 100, 500, 500, 500 )
uv = Vector2Array(  )
color = Color( 0.917647, 0.917647, 0.917647, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Rekordo" type="Label" parent="Nivelo_malnova"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = -267.0
margin/bottom = -350.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="Nivelo_malnova"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 400.0
margin/right = -650.0
margin/bottom = -500.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Via Rekordo"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ludi" type="Button" parent="Nivelo_malnova"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 500.0
margin/right = 400.0
margin/bottom = 600.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ludi"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="Nivelo_malnova"]

transform/pos = Vector2( -93, 1 )
polygon = Vector2Array( 493, 199, 793, 249, 807, 470, 493, 599 )
uv = Vector2Array(  )
color = Color( 0.403922, 0.227451, 0.717647, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Nivelo_malnova"]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.6, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 250.0
margin/right = -912.0
margin/bottom = -556.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
text = "Malnova epoko"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="tween_complete" from="Fadi" to="." method="_on_Fadi_tween_complete"]

[connection signal="pressed" from="Nivelo_nova/Ludi" to="." method="_on_Ludi_pressed"]

[connection signal="pressed" from="Nivelo_malnova/Ludi" to="." method="_on_Ludi_malnova_pressed"]


